[package]
name = "zero-pool"
version = "0.8.0"
edition = "2024"
authors = ["PieInOblivion"]
license = "MIT"
description = "High-performance thread pool with consistent low-latency task dispatch"
repository = "https://github.com/void-research/zero-pool"
keywords = ["threadpool", "performance", "parallel", "concurrency", "lockfree"]
categories = ["concurrency"]
readme = "README.md"
exclude = [
    ".gitignore",
    "rust-toolchain.toml",
    "benches/*",
    "tests/*",
]

[dependencies]
# stdlib only!

[dev-dependencies]
rayon = "1"

[[bench]]
name = "comparison"
# zero-pool compiles on stable, but currently uses nightly for benches